[project]
name = "yt"
version = "0.1.0"
description = "YouTube工具集"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0"
]

[project.scripts]
yt = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
